--- a/spendly/src/main/resources/application.properties
+++ b/spendly/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=spendly
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
