--- a/spendly/pom.xml
+++ b/spendly/pom.xml
@@ -45,7 +45,32 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+			<!-- Dipendenza per JPA -->
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version> <!-- o una versione più recente, se disponibile -->
+		</dependency>
 		
+		<!-- Dipendenza per Hibernate (implementazione JPA) -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.22.Final</version> <!-- o la versione più recente -->
+		</dependency>
+
+		<!-- Dipendenza per Spring Data JPA, se utilizzi Spring Boot -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5</version> <!-- Usa la versione più recente disponibile -->
+    	</dependency>
+
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring5</artifactId>
