--- a/spendly/src/main/resources/application.properties
+++ b/spendly/src/main/resources/application.properties
@@ -2,3 +2,18 @@ spring.application.name=spendly
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
+
+# Configurazione del datasource per PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
+spring.datasource.username=your_database_user
+spring.datasource.password=your_database_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configurazione JPA
+spring.jpa.hibernate.ddl-auto=update   # Può essere 'create', 'update', 'validate', o 'none'
+spring.jpa.show-sql=true    
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configurazione di altre opzioni JPA
+spring.jpa.properties.hibernate.format_sql=true  
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
