--- a/spendly/src/main/resources/application.properties
+++ b/spendly/src/main/resources/application.properties
@@ -3,17 +3,20 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 
+# Hibernate ddl auto (create, create-drop, validate, update)
+# Only for testing purpose. Comment this in production
+# update per tenere database, create-drop per rasarlo ogni volta
+# spring.jpa.hibernate.ddl-auto=create-drop
+
+# Log JPA queries. Comment this in production
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Configurazione del datasource per PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
-spring.datasource.username=your_database_user
-spring.datasource.password=your_database_password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update   
+spring.datasource.url=jdbc:postgresql://localhost:5432/proge?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=12345
 
-# Configurazione JPA
-spring.jpa.hibernate.ddl-auto=update   # Può essere 'create', 'update', 'validate', o 'none'
-spring.jpa.show-sql=true    
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Configurazione di altre opzioni JPA
-spring.jpa.properties.hibernate.format_sql=true  
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
