--- a/spendly/pom.xml
+++ b/spendly/pom.xml
@@ -61,7 +61,18 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>3.4.1</version>
 		</dependency>	
+		
+	 	<!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
