-Login/Autenticazione funzionante

--- a/spendly/src/main/resources/application.properties
+++ b/spendly/src/main/resources/application.properties
@@ -1,13 +1,4 @@
-spring.application.name=spendly
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.enabled=true
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-# Only for testing purpose. Comment this in production
-# update per tenere database, create-drop per rasarlo ogni volta
-# spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.application.name=MyStore
 # Log JPA queries. Comment this in production
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
@@ -19,4 +10,3 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/proge?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=12345
-
