-Ritocchi Stile e aggiunta immagini

--- a/spendly/src/main/resources/application.properties
+++ b/spendly/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=MyStore
+spring.application.name=Spendly
 # Log JPA queries. Comment this in production
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
