--- a/spendlyapi/frontend/package.json
+++ b/spendlyapi/frontend/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.3.1",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
