--- a/spendlyapi/frontend/package.json
+++ b/spendlyapi/frontend/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "pinia": "^2.3.1",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3",
